make the navbar sticky, make the same margin for all sections, use socila icons on footer, hide scrollbar on mobile, correct the order of style sheet and add the humberger

--- a/styles/style.css
+++ b/styles/style.css
@@ -116,8 +116,18 @@ img {
   display: none;
 }
 
+.show-menu {
+  display: none;
+}
+
 .logo-nav {
   width: 15%;
+}
+
+.sticky {
+  position: sticky;
+  top: 0;
+  z-index: 5;
 }
 
 /**** navbar 1 ****/
@@ -289,7 +299,9 @@ img {
 .latest-news-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
+  padding: 0 10px;
   gap: 30px;
+
 }
 
 .latest-news-item h4 {
@@ -309,14 +321,15 @@ img {
 }
 
 .fund-container {
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 30px;
+  padding: 0 10px;
 }
 
 .fund-item {
-  width: 20%;
+  width: 100%;
   height: fit-content;
-  margin: 20px;
   box-sizing: border-box;
 }
 
@@ -381,7 +394,7 @@ img {
 .categories-grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  padding: 30px;
+  padding: 10px;
   gap: 30px;
 }
 
@@ -442,6 +455,7 @@ img {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 30px;
+  padding: 10px;
 }
 
 .latest-deals-item h4 {
@@ -542,8 +556,11 @@ img {
   }
 
   /*** latest round of funding ***/
-  .fund-item {
-    width: 30%;
+  .fund-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 30px;
+    padding: 0 10px;
   }
 
   /**** categories ****/
@@ -562,6 +579,10 @@ img {
 
 /*** break point 770px ***/
 @media only screen and (max-width: 700px) {
+  body {
+    overflow: hidden;
+  }
+
   .disappear {
     display: none;
   }
@@ -577,10 +598,15 @@ img {
   }
 
   /**** navbar 2 ****/
+  .show-menu {
+    display: inline-block;
+  }
+
   .navbar-2 {
     display: flex;
     justify-content: flex-end;
     background: #fff;
+    height: 100%;
   }
 
   /**** top stories ****/
@@ -622,9 +648,9 @@ img {
   }
 
   .fund-item {
-    width: 100%;
+    width: 80%;
     height: fit-content;
-    margin: 20px;
+    margin: 10px;
   }
 
   .fund-header {
